feat: 4-4 Recap Fetch() & Send and Console Each Data

--- a/1. Intermediate JavaScript & API/module-4 API, JSON, Data load, dynamic website/02/index.html
+++ b/1. Intermediate JavaScript & API/module-4 API, JSON, Data load, dynamic website/02/index.html
@@ -10,6 +10,8 @@
 
     <button onclick="loadData()">Load Data in console...</button>
 
+    <button onclick="loadPosts()">Load Posts</button>
+
     <script src="./main.js"></script>
   </body>
 </html>
