feat: 5-3 Load and Display All Lessons with API as Figma

--- a/milestone_1_intermediate_javascript_&_api/module_5_api_recap_with_english_janala/index.html
+++ b/milestone_1_intermediate_javascript_&_api/module_5_api_recap_with_english_janala/index.html
@@ -35,7 +35,11 @@
             href="/milestone_1_intermediate_javascript_&_api/module_5_api_recap_with_english_janala/index.html"
             class="inline-block"
           >
-            <img class="w-28 pointer-events-none" src="./assets/images/logo.svg" alt="logo" />
+            <img
+              class="w-28 pointer-events-none"
+              src="./assets/images/logo.svg"
+              alt="logo"
+            />
           </a>
         </div>
 
@@ -44,7 +48,7 @@
           <!-- faq btn -->
           <div class="nav_btn_gap">
             <button
-              class="px-7 py-3 text-sm font-semibold rounded-sm bg-zinc-800 text-zinc-300 hover:bg-zinc-900"
+              class="px-7 py-3 text-sm font-thin rounded-sm bg-zinc-800 text-zinc-300 hover:bg-zinc-900"
             >
               <span>
                 <i class="ri-question-line"></i>
@@ -56,10 +60,10 @@
           <!-- learn btn -->
           <div class="nav_btn_gap">
             <button
-              class="px-7 py-3 text-sm font-semibold rounded-sm bg-zinc-800 text-zinc-300 hover:bg-zinc-900"
+              class="px-7 py-3 text-sm font-thin rounded-sm bg-zinc-800 text-zinc-300 hover:bg-zinc-900"
             >
               <span>
-                <i class="ri-book-open-line"></i>
+                <i class="ri-booklet-line"></i>
               </span>
               <p>Learn</p>
             </button>
@@ -68,7 +72,7 @@
           <!-- logout btn -->
           <div class="nav_btn_gap">
             <button
-              class="px-7 py-3 text-sm font-semibold rounded-sm bg-zinc-800 text-zinc-300 hover:bg-zinc-900"
+              class="px-7 py-3 text-sm font-thin rounded-sm bg-zinc-800 text-zinc-300 hover:bg-zinc-900"
             >
               <span>
                 <i class="ri-logout-circle-r-line"></i>
@@ -82,14 +86,18 @@
     <!-- header section end -->
 
     <!-- banner section start -->
-    <section class="w-full min-h-dvh flex items-center px-4 py-4 sm:py-10">
+    <section
+      class="w-full min-h-dvh flex items-center px-4 py-4 sm:py-10 bg-zinc-100"
+    >
       <div class="max-w-[1440px] w-full mx-auto">
         <div
           class="max-w-full sm:max-w-2xl sm:mx-auto text-center space-y-4 sm:space-y-6"
         >
           <!-- heading -->
           <div class="space-y-2 sm:space-y-6">
-            <h1 class="text-4xl sm:text-5xl font-semibold">English is Easy..!!</h1>
+            <h1 class="text-4xl sm:text-5xl font-semibold">
+              English is Easy..!!
+            </h1>
             <p
               lang="bn"
               class="text-[1rem] sm:text-2xl font-thin text-zinc-900 opacity-80"
@@ -140,6 +148,24 @@
         </div>
       </div>
     </section>
+    <!-- banner section end -->
+
+    <!-- main -->
+    <main class="w-full max-w-[1440px] mx-auto p-4">
+      <!-- vocabularies section -->
+      <section>
+        <h1 lang="en" class="text-center text-4xl font-semibold my-10">
+          Let's Learn Vocabularies
+        </h1>
+
+        <div
+          id="voccabularyContainer"
+          class="bg-gray-100 flex items-center gap-5 flex-wrap justify-center"
+        >
+          <!-- exicute by javascript -->
+        </div>
+      </section>
+    </main>
 
     <!-- connect js file -->
     <script src="./assets/js/main.js"></script>
