--- a/milestone_1_intermediate_javascript_&_api/module_5_api_recap_with_english_janala/index.html
+++ b/milestone_1_intermediate_javascript_&_api/module_5_api_recap_with_english_janala/index.html
@@ -87,7 +87,7 @@
 
     <!-- banner section start -->
     <section
-      class="w-full min-h-dvh flex items-center px-4 py-4 sm:py-10 bg-zinc-100"
+      class="w-full min-h-dvh flex items-center px-4 py-4 sm:py-10 bg-zinc-50"
     >
       <div class="max-w-[1440px] w-full mx-auto">
         <div
@@ -154,15 +154,28 @@
     <main class="w-full max-w-[1440px] mx-auto p-4">
       <!-- vocabularies section -->
       <section>
-        <h1 lang="en" class="text-center text-4xl font-semibold my-10">
-          Let's Learn Vocabularies
-        </h1>
+        <div class="">
+          <h1 lang="en" class="text-center text-4xl font-semibold my-10">
+            Let's Learn Vocabularies
+          </h1>
+          <div
+            id="voccabularyContainer"
+            class="flex items-center gap-5 flex-wrap justify-center"
+          >
+            <!-- exicute by javascript -->
+          </div>
+        </div>
 
-        <div
-          id="voccabularyContainer"
-          class="bg-gray-100 flex items-center gap-5 flex-wrap justify-center"
-        >
-          <!-- exicute by javascript -->
+        <!-- message -->
+        <div class="bg-stone-50 rounded-3xl px-4 py-16 mt-10">
+          <div class="text-center space-y-3">
+            <h4 lang="bn" class="text-stone-500 text-sm font-thin">
+              আপনি এখনো কোনো <span lang="en">Lesson Select</span> করেননি
+            </h4>
+            <h1 lang="bn" class="text-2xl sm:text-4xl text-stone-800 font-thin">
+              একটি <span lang="en">Lesson Select</span> করুন।
+            </h1>
+          </div>
         </div>
       </section>
     </main>
