--- a/milestone_1_intermediate_javascript_&_api/module_5_api_recap_with_english_janala/index.html
+++ b/milestone_1_intermediate_javascript_&_api/module_5_api_recap_with_english_janala/index.html
@@ -36,7 +36,7 @@
             class="inline-block"
           >
             <img
-              class="w-28 pointer-events-none"
+              class="w-28 pointer-events-none select-none"
               src="./assets/images/logo.svg"
               alt="logo"
             />
@@ -153,7 +153,7 @@
     <!-- main -->
     <main class="w-full max-w-[1440px] mx-auto p-4">
       <!-- vocabularies section -->
-      <section>
+      <section class="pb-10">
         <div class="">
           <h1 lang="en" class="text-center text-4xl font-semibold my-10">
             Let's Learn Vocabularies
@@ -167,7 +167,9 @@
         </div>
 
         <!-- message -->
-        <div class="bg-stone-50 rounded-3xl px-4 py-16 mt-10">
+        <div
+          class="bg-stone-50 border border-zinc-200 rounded-3xl px-4 py-16 mt-10"
+        >
           <div class="text-center space-y-3">
             <h4 lang="bn" class="text-stone-500 text-sm font-thin">
               আপনি এখনো কোনো <span lang="en">Lesson Select</span> করেননি
@@ -179,6 +181,60 @@
         </div>
       </section>
     </main>
+
+    <!-- footer section start -->
+    <footer
+      class="w-full border border-stone-200 bg-white px-4 py-10 md:px-20 md:py-24"
+    >
+      <div class="max-w-[1440px] mx-auto">
+        <div class="mb-5">
+          <img
+            width="100"
+            class="pointer-events-none select-none"
+            src="./assets/images/logo.svg"
+            alt="logo"
+          />
+        </div>
+
+        <div class="sm:flex sm:items-center sm:justify-between">
+          <div class="space-y-1 sm:space-y-2">
+            <h2 lang="bn" class="text-black text-xl font-thin">
+              ইংরেজি শিখুন সহজে
+            </h2>
+            <p lang="en" class="text-black text-base font-thin">
+              Providing ED-Tech Applications since 2025
+            </p>
+          </div>
+
+          <div class="mt-5 sm:mt-0 flex flex-col gap-1">
+            <div class="">
+              <p class="text-zinc-900 opacity-60 text-sm font-thin">
+                Follow us
+              </p>
+            </div>
+
+            <div class="flex items-center gap-2">
+              <span
+                ><i
+                  class="ri-facebook-circle-line cursor-pointer text-2xl sm:text-3xl text-zinc-800 font-thin"
+                ></i
+              ></span>
+              <span
+                ><i
+                  class="ri-youtube-line cursor-pointer text-2xl sm:text-3xl text-zinc-800 font-thin"
+                ></i
+              ></span>
+              <span
+                ><i
+                  class="ri-instagram-line cursor-pointer text-2xl sm:text-3xl text-zinc-800 font-thin"
+                ></i
+              ></span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- footer section end -->
 
     <!-- connect js file -->
     <script src="./assets/js/main.js"></script>
