feat: 5-7 Highlight Active Lesson and Integrate DaisyUI Modal

--- a/milestone_1_intermediate_javascript_&_api/module_5_api_recap_with_english_janala/index.html
+++ b/milestone_1_intermediate_javascript_&_api/module_5_api_recap_with_english_janala/index.html
@@ -22,6 +22,13 @@
       href="https://cdn.jsdelivr.net/npm/remixicon@4.9.0/fonts/remixicon.css"
       rel="stylesheet"
     />
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/daisyui@5"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   </head>
   <body>
     <!-- header section start -->
@@ -188,6 +195,19 @@
           </div>
         </div>
       </section>
+
+      <!-- Open the modal using ID.showModal() method -->
+      <!-- <button class="btn" onclick="my_modal_2.showModal()">open modal</button> -->
+      <dialog id="my_modal_2" class="modal">
+        <div class="modal-box">
+          <h3 class="text-lg font-bold">Hello!</h3>
+          <p class="py-4">Press ESC key or click outside to close</p>
+        </div>
+        <form method="dialog" class="modal-backdrop">
+          <button>close</button>
+        </form>
+      </dialog>
+
     </main>
 
     <!-- footer section start -->
