feat: 7-8 dot vs bracket notation

--- a/milestone_2_introduction_to_simple_react/module_7_javascript_you_need_to_know_for_react/index.html
+++ b/milestone_2_introduction_to_simple_react/module_7_javascript_you_need_to_know_for_react/index.html
@@ -27,6 +27,7 @@
     <button onclick="handleClear()">clear</button>
 
     <!-- script files -->
-    <script src="./storage.js"></script>
+    <!-- <script src="./storage.js"></script> -->
+    <script src="./notation.js"></script>
   </body>
 </html>
